; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_rtsp.c_rtsp_conncheck.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_rtsp.c_rtsp_conncheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { i32 }

@CONNRESULT_NONE = common dso_local global i32 0, align 4
@CONNCHECK_ISDEAD = common dso_local global i32 0, align 4
@CONNRESULT_DEAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i32)* @rtsp_conncheck to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtsp_conncheck(%struct.connectdata* %0, i32 %1) #0 {
  %3 = alloca %struct.connectdata*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.connectdata* %0, %struct.connectdata** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @CONNRESULT_NONE, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @CONNCHECK_ISDEAD, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %13 = call i64 @rtsp_connisdead(%struct.connectdata* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = load i32, i32* @CONNRESULT_DEAD, align 4
  %17 = load i32, i32* %5, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %5, align 4
  br label %19

19:                                               ; preds = %15, %11
  br label %20

20:                                               ; preds = %19, %2
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i64 @rtsp_connisdead(%struct.connectdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
